# chap_auto_regressive_rs

./: Cargo.toml  README.md
.github/workflows/: checks.yml
src/: config.rs  features.rs  interpolate.rs  io.rs  layers.rs  lib.rs  main.rs  model.rs  period.rs  sample.rs  scaler.rs  validate.rs  weights.rs
tests/: parity.rs
tests/fixtures/: future.csv  historic.csv  meta.json  model.pkl  parity.safetensors  weights.safetensors
