[package]
name = "chap-ar-predict"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
ndarray = "0.17.2"
rand = "0.10.1"
rand_distr = "0.6.0"
safetensors = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
statrs = "0.18.0"
